--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+ @layer base {
+    body{
+        background-color: #f0f2f5;
+    }
+ }
 
 
 
