--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,9 @@
 @tailwind base;
-@tailwind components;
-@tailwind utilities;
- @layer base {
-    body{
-        background-color: #f0f2f5;
-    }
- }
+  @tailwind components;
+  @tailwind utilities;
 
-
-
+  @layer base {
+   body{
+    background-color: rgb(226, 234, 244);
+   }
+  }
